# CognitiveOS

./: .env.development  .env.example  .env.production  .gitignore  Makefile  README.md  README_EN.md  config.example.yml  docker-compose.yml  piccolo_conf.py  pyproject.toml
app/: admin.py  config.py  constants.py  container.py  enums.py  main.py  piccolo_app.py  runtime.py
app/agents/: __init__.py  tooling.py
app/bot/: __init__.py  discord_handler.py  feishu_handler.py  message_service.py
app/channels/: __init__.py  adapter_base.py  discord.py  feishu.py  message.py  registry.py  runtime.py  webhook_manager.py
app/core/: __init__.py  exceptions.py  model.py  repository.py  service.py
app/im/: __init__.py  base.py  dingtalk.py  discord.py  feishu.py  wecom.py
app/middleware/: __init__.py  auth.py  im_signature.py  request_tracking.py
app/models/: __init__.py  embedding_record.py  knowledge_item.py  memory.py  prompt.py  prompt_template.py  reminder.py  sessions.py
app/note/: __init__.py  base.py  logseq.py  service.py
app/repositories/: __init__.py  embedding_record_repo.py  knowledge_item_repo.py  memory_repo.py  prompt_repo.py  prompt_template_repo.py
app/routes/: health.py  im.py  items.py  prompts.py  retrieval.py  webhook.py
app/schemas/: __init__.py  common.py  im.py  prompt.py  retrieval.py  webhook.py
app/services/: __init__.py  calendar_service.py  capture_service.py  cognitive_agent_service.py  discord_bot.py  feishu_bot.py  (+12 more)
docs/: brain-os-roadmap.md  discord_bot.md  feishu_bot.md  reminder.md
piccolo_migrations/: cognitive_2026_02_19t13_37_33_956455.py  cognitive_2026_02_19t15_59_03_258711.py  cognitive_2026_02_19t16_10_27_318321.py  cognitive_2026_02_19t21_05_54_525136.py  cognitive_2026_02_20t16_52_13_888032.py  cognitive_2026_02_20t17_17_43_745332.py
tests/: conftest.py  test_bot_lifecycle.py  test_channels_runtime.py  test_channels_webhook_manager.py  test_memory_layer.py
(+27 files in other folders)
